--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,6 +2,7 @@
 @import "bootstrap";
 
 /* universal */
+$light-gray: #777;
 
 body {
 	padding-top: 60px;
@@ -17,10 +18,9 @@ textarea {
 
 .center {
 	text-align: center;
-}
-
-.center h1 {
+	h1 {
 	margin-bottom: 10px;
+	}
 }
 
 /* typography */
@@ -42,7 +42,7 @@ h2 {
 	margin-bottom: 30px;
 	text-align: center;
 	font-weight: normal;
-	color: #777;
+	color: $light-gray;
 }
 
 p {
@@ -61,11 +61,10 @@ p {
 	letter-spacing: -1px;
 	padding-top: 9px;
 	font-weight: bold;
-}
-
-#logo:hover {
+	&:hover {
 	color: #fff;
 	text-decoration: none;
+	}
 }
 
 /* footer */
@@ -74,27 +73,23 @@ footer {
 	margin-top: 45px;
 	padding-top: 5px;
 	border-top: 1px solid #eaeaea;
-	color: #777;
+	color: $light-gray;
+	a {
+	color: $gray;
+	a:hover {
+	color: $gray-darker;
+	}
 }
-
-footer a {
-	color: #555;
-}
-
-footer a:hover {
-	color: #222;
-}
-
-footer small {
+	small {
 	float: left;
 }
 
-footer ul {
+	ul {
 	float: right;
 	list-style: none;
-}
-
-footer ul li {
+	li {
 	float: left;
 	margin-left: 15px;
+	}
+}
 }
